--- a/SocialWeave/Views/Post/Edit.cshtml
+++ b/SocialWeave/Views/Post/Edit.cshtml
@@ -242,7 +242,7 @@ else
     </div>
     <div class="text-center">
         <form method="post" asp-action="DeletePost" asp-controller="Post" asp-route-id="@Model.Id">
-            <button class="btn text-danger">Delete Post <i class="bi bi-trash-fill"></i> </button>
+            <button class="btn btn-outline-danger text-danger">Delete Post <i class="bi bi-trash-fill"></i> </button>
         </form>
     </div>
 }
