--- a/SocialWeave/Views/User/UserPage.cshtml
+++ b/SocialWeave/Views/User/UserPage.cshtml
@@ -177,7 +177,7 @@
                         <div class="d-flex justify-content-between mb-3">
                             <button class="btn btn-outline-primary toggle-comments" data-post-id="@post.Id"><i class="bi bi-chat-left-text"></i></button>
                             <div class="d-flex flex-column">
-                                @if (post.Likes != null && post.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                @if (post.Likes != null && post.Likes.Count() != 0&&post.Likes.Any(l => l.User.Name == User.Identity.Name))
                                 {
                                     <form method="post" asp-action="Dislike" asp-route-id="@post.Id" asp-controller="Post" class="me-3">
                                         <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@post.Likes.CountLikes()</span></button>
@@ -295,7 +295,7 @@
                         <div class="d-flex justify-content-between mb-3" style="margin-top: 20px;">
                             <button class="btn btn-outline-primary toggle-comments" data-post-id="@postImage.Id"><i class="bi bi-chat-left-text"></i></button>
                             <div class="d-flex flex-column">
-                                @if (postImage.Likes != null && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
+                                @if (postImage.Likes != null && postImage.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
                                 {
                                     <form method="post" asp-action="Dislike" asp-route-id="@postImage.Id" asp-controller="Post" class="me-3">
                                         <button class="text-xxl-end btn btn-purple" type="submit"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@postImage.Likes.CountLikes()</span></button>
@@ -379,6 +379,7 @@
             <h2 class="info-text">@Model.Comments.Count() Comments</h2>
         </div>
     </div>
+    <div class="post">
     <div class="text-center">
         @foreach (var comment in Model.Comments)
         {
@@ -407,13 +408,13 @@
                 {
                     <div class="comment-like ms-auto">
                         <form method="post" asp-action="DeleteComment" asp-route-id="@comment.Id" asp-controller="Post">
-                            <button type="submit" class="btn btn-like-comment"><i class="bi bi-trash-fill text-danger"></i></button>
+                            <button type="submit" class="btn"><i class="bi bi-trash3-fill text-danger"></i></button>
                         </form>
                     </div>
                 }
                 else
                 {
-                    @if (comment.Likes != null && comment.Likes.Count() != 0 && comment.Likes.Any(l => l.User.Name == User.Identity.Name))
+                    @if (comment.Likes != null && comment.Likes.Any(l => l.User.Name == User.Identity.Name))
                     {
                         <form method="post" asp-action="DislikeComment" asp-route-id="@comment.Id" asp-controller="Post">
                             <button type="submit" class="btn btn-like-comment"><i class="bi bi-heart-fill text-danger"></i> <span class="m-0 text-danger">@comment.Likes.CountLikes()</span></button>
@@ -430,6 +431,8 @@
             <hr />
         }
     </div>
+    </div>
+
 }
 
 @if (Model == null)
