--- a/SocialWeave/Views/Search/PageOfSearch.cshtml
+++ b/SocialWeave/Views/Search/PageOfSearch.cshtml
@@ -103,7 +103,6 @@
             <h4>Search Results for "<span>@ViewBag.Query</span>"</h4>
         </div>
 
-
         <div class="text-center">
             @if (Model != null && Model.Users != null && Model.Users.Any())
             {
@@ -198,8 +197,19 @@
                                                             {
                                                                 <div class="comment-container d-flex align-items-center mb-3">
                                                                     <div class="comment-details">
-                                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                        @if (comment.User.PictureProfile == null)
+                                                                        {
+                                                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                                                <input type="hidden" name="name" value="@post.User.Name" />
+                                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                            </form>
+                                                                        }
                                                                     </div>
                                                                     <div class="comment-like ms-auto">
                                                                         @if (comment.Likes != null && comment.Likes.Count() != 0 && post.Likes.Any(l => l.User.Name == User.Identity.Name))
@@ -295,8 +305,19 @@
                                                             {
                                                                 <div class="comment-container d-flex align-items-center mb-3">
                                                                     <div class="comment-details">
-                                                                        <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
-                                                                        <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                        @if (comment.User.PictureProfile == null)
+                                                                        {
+                                                                            <h9 class="text-primary d-inline-block"><i class="bi bi-person-circle mx-2 text-primary"></i>@comment.User.Name.CutName()</h9>
+                                                                            <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <form asp-action="UserPageWithParams" asp-controller="User" method="get">
+                                                                                <input type="hidden" name="name" value="@post.User.Name" />
+                                                                                <button class="btn text-light"><img src="data:image/png;base64,@(Convert.ToBase64String(comment.User.PictureProfile))" class="img-fluid rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;" /> @comment.User.Name.CutName():</button>
+                                                                                <p class="d-inline-block mx-2">@comment.Text.CutComment()</p>
+                                                                            </form>
+                                                                        }
                                                                     </div>
                                                                     <div class="comment-like ms-auto">
                                                                         @if (comment.Likes != null && comment.Likes.Count() != 0 && postImage.Likes.Any(l => l.User.Name == User.Identity.Name))
