Improved login and registration view

--- a/SocialWeave/Views/User/Register.cshtml
+++ b/SocialWeave/Views/User/Register.cshtml
@@ -1,58 +1,96 @@
 ﻿@model SocialWeave.Models.ViewModels.UserCreateViewModel
 
+<div class="row">
+    <div class="col-md-12 text-center">
+        <h1 class="info-text">Register<i class="bi bi-person-lines-fill"></i></h1>
+    </div>
+</div>
+<div class="custom-border"></div>
 <form method="post" asp-controller="User" asp-action="Register" onsubmit="return validateForm()">
     <div class="container">
         @if (TempData["ErrorMessage"] != null)
         {
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-danger strong-red" role="alert">
                 @TempData["ErrorMessage"]
             </div>
 
         }
         <main role="main" class="pb-3">
             <div class="login-container">
-                <h2>Register</h2>
-                <hr />
                 <div class="mb-3">
                     <label for="Name" class="form-label">Name:</label>
-                    <input type="text" class="form-control" asp-for="Name" id="Name" placeholder="Enter your name">
+                    <input type="text" class="form-control bg-dark text-light" asp-for="Name" id="Name" placeholder="Enter your name">
                     <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" asp-for="Email" id="Email" placeholder="Enter your email">
+                    <input type="email" class="form-control bg-dark text-light" asp-for="Email" id="Email" placeholder="Enter your email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
                 <div class="mb-3">
                     <label for="BirthDate" class="form-label">Birth Date:</label>
-                    <input type="date" class="form-control" asp-for="BirthDate" id="BirthDate">
+                    <input type="date" class="form-control bg-dark text-light" asp-for="BirthDate" id="BirthDate">
                     <span class="text-danger" asp-validation-for="BirthDate"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Password" class="form-label">Password:</label>
-                    <input type="password" class="form-control" asp-for="Password" id="Password" placeholder="Enter your password">
+                    <input type="password" class="form-control bg-dark text-light" asp-for="Password" id="Password" placeholder="Enter your password">
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
 
                 <div class="mb-3">
                     <label for="ConfirmPassword" class="form-label">Confirm Password: </label>
-                    <input type="password" class="form-control" id="ConfirmPassword" placeholder="Confirm your password">
+                    <input type="password" class="form-control bg-dark text-light" id="ConfirmPassword" placeholder="Confirm your password">
                     <span class="text-danger" id="confirmPasswordError"></span>
                 </div>
                 <div class="mb-3">
                     <label for="PhoneNumber" class="form-label">Phone Number:</label>
-                    <input type="tel" class="form-control" asp-for="PhoneNumber" id="PhoneNumber" placeholder="Optional">
+                    <input type="tel" class="form-control bg-dark text-light" asp-for="PhoneNumber" id="PhoneNumber" placeholder="Optional">
                     <span class="text-danger" asp-validation-for="PhoneNumber"></span>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-success w-50">Register</button>
+                    <button type="submit" class="btn btn-outline-success w-50">Register</button>
                 </div>
-                <hr />
                 <a class="w-50" asp-controller="User" asp-action="Login">Login</a>
             </div>
         </main>
     </div>
+    <div class="custom-border"></div>
 </form>
+
+<style>
+    .strong-green {
+        background-color: #28a745;
+        color: #fff;
+    }
+
+    .strong-red {
+        background-color: #dc3545;
+        color: #fff;
+    }
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+        margin: 90px 0;
+    }
+
+    .post-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .info-text {
+        background: linear-gradient(to right, #000080, #4B0082);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+</style>
+
 
 @section Scripts {
     <script>
