--- a/SocialWeave/Views/User/Login.cshtml
+++ b/SocialWeave/Views/User/Login.cshtml
@@ -14,28 +14,31 @@
         </div>
     }
 
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1 class="info-text">Login <i class="bi bi-box-arrow-in-right"></i></h1>
+        </div>
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             <div class="login-container">
-                <h2>Login</h2>
-                <hr />
+                <div class="custom-border"></div>
                 <div class="mb-3">
-                    <label for="Email" class="form-label">Email: </label>
-                    <input type="email" class="form-control" asp-for="Email" id="Email" placeholder="Enter your email">
+                    <label for="Email" class="form-label text-center">Email: </label>
+                    <input type="email" class="form-control bg-dark text-light" asp-for="Email" id="Email" placeholder="Enter your email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                 </div>
                 <div class="mb-3">
                     <label for="Password" class="form-label">Password: </label>
                     <div class="input-group">
-                        <input type="password" class="form-control" asp-for="Password" id="Password" placeholder="Enter your password">
+                        <input type="password" class="form-control bg-dark text-light" asp-for="Password" id="Password" placeholder="Enter your password">
                         <button class="btn btn-outline-secondary" type="button" id="togglePassword">Show</button>
                     </div>
                     <span class="text-danger" asp-validation-for="Password"></span>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary w-50">Login</button>
+                    <button type="submit" class="btn btn-outline-primary w-50">Login</button>
                 </div>
-                <hr>
                 <div class="d-flex justify-content-between">
                     <div>
                         <a class="" asp-controller="User" asp-action="Register">Sign Up</a>
@@ -47,6 +50,7 @@
             </div>
         </main>
     </div>
+    <div class="custom-border"></div>
 </form>
 
 <style> 
@@ -59,6 +63,28 @@
         background-color: #dc3545;
         color: #fff;
     }
+
+    .custom-border {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(to right, #000080, #4B0082);
+        margin: 90px 0;
+    }
+
+    .post-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+ 
+    .info-text {
+        background: linear-gradient(to right, #000080, #4B0082);
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        margin-bottom: 20px;
+    }
+
 </style>
 
 @section Scripts {
