Created notifications controller and made the second migration

--- a/SocialWeave/Views/Shared/_Layout.cshtml
+++ b/SocialWeave/Views/Shared/_Layout.cshtml
@@ -36,11 +36,14 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Post" asp-action="ChoosePostType"><i class="bi bi-plus-circle-dotted mx-1"></i></a>
                             </li>
-
+                            <li class="nav-item my-auto">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Notification" asp-action="ShowNotification">
+                                    <strong><i class="bi bi-bell"></i></strong>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="LogoutGet"><i class="bi bi-box-arrow-in-left mx-1"></i></a>
                             </li>
-
                             <li class="nav-item my-auto">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Search" asp-action="PageOfSearch">
                                     <strong><i class="bi bi-search"></i></strong>
