Implementation of notifications functionality

--- a/SocialWeave/Views/Shared/_Layout.cshtml
+++ b/SocialWeave/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Post" asp-action="ChoosePostType"><i class="bi bi-plus-circle-dotted mx-1"></i></a>
                             </li>
                             <li class="nav-item my-auto">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Notification" asp-action="ShowNotification">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Notification" asp-action="ShowNotifications">
                                     <strong><i class="bi bi-bell"></i></strong>
                                 </a>
                             </li>
