Added logic to show notification if there is a filter performed to implement the functionality

--- a/SocialWeave/Views/Search/PageOfSearch.cshtml
+++ b/SocialWeave/Views/Search/PageOfSearch.cshtml
@@ -362,7 +362,7 @@
     @if (Model.Users.Count() == 0 && Model.Posts.Count() == 0)
     {
         <div class="text-center">
-            <strong>Nothing was found, try another name</strong>
+            <strong>Nothing was found!</strong>
         </div>
     }
 }
